@startuml
' Class Diagram - User & Branch Module
' Branch, Room, Customer, UserAccount, Employee, MembershipTierConfig, SystemConfig

top to bottom direction

skinparam classAttributeIconSize 0
skinparam classFontSize 11
skinparam packageFontSize 13
skinparam linetype polyline
skinparam shadowing true

<style>
root {
  nodesep 60
  ranksep 40
}
</style>

package "User & Branch" {

  class Branch {
    - id : Long
    - name : String
    - address : String
    - phone : String
    - active : boolean
  }

  class Room {
    - id : Long
    - name : String
    - type : String
    - capacity : int
    - hourlyPrice : BigDecimal
    - status : RoomStatus
    - active : boolean
  }

  class Customer {
    - id : Long
    - salutation : String
    - firstName : String
    - lastName : String
    - fullName : String
    - phone : String
    - tier : String
    - points : int
  }

  class UserAccount {
    - id : Long
    - username : String
    - email : String
    - passwordHash : String
    - role : UserRole
    - active : boolean
  }

  class Employee {
    - id : Long
    - fullName : String
    - phone : String
    - role : UserRole
    - active : boolean
  }

  class MembershipTierConfig {
    - tierName : String
    - minPoints : int
    - discount : BigDecimal
  }

  class SystemConfig {
    - configKey : String
    - configValue : String
  }

  enum RoomStatus {
    AVAILABLE
    OCCUPIED
    RESERVED
    CLEANING
    MAINTENANCE
  }

  enum UserRole {
    CLIENT
    RECEPTIONIST
    SERVICE_STAFF
    BRANCH_MANAGER
    ADMIN
  }
}

Branch "1" --> "*" Room
Branch "1" --> "*" Employee
Room --> RoomStatus
UserAccount --> UserRole
Employee --> UserRole

@enduml
